# PreVectorChunks

./: .gitignore  CONTRIBUTING.md  README.md  asgi.py  manage.py  mission.txt  old_packages.txt  pyproject.toml  requirements.txt  settings.py  urls.py  wsgi.py
PreVectorChunks/: .env  .env.example  README.md  pyproject.toml  settings.py  test_loader.py  urls.py  wsgi.py
PreVectorChunks-Web/: pyproject.toml
PreVectorChunks-Web/api/: views.py
PreVectorChunks/api/: views.py
PreVectorChunks/content_playground/: TextToChunk.json  transform-grouped-by-doc-name-content-to-vdb-metadata-format.json
PreVectorChunks/services/: chunk_documents_crud_vdb.py
PreVectorChunks/utils/: file_loader.py  llm_wrapper.py
core/: LICENCE  LICENSE  README.md  pyproject.toml
core/prevectorchunks_core/: MANIFEST.in  content.docx  content.json  content.txt  propositional_index.txt  test_loader.py
core/prevectorchunks_core/config/: splitter_config.py
core/prevectorchunks_core/content_playground/: TextToChunk.docx  TextToChunkSimple.docx  content.json  fetch-content-grouped-by-doc-name-format.json
core/prevectorchunks_core/os-llm/: llava.py
core/prevectorchunks_core/rlchunker/: __init__.py  env.py  inference.py  model.py  reward.py  savepretrained.py  testpretrained.py  utils.py
core/prevectorchunks_core/rlchunker/pretrained/: model_info.txt  policy_model.pt
core/prevectorchunks_core/services/: DocuToImageConverter.py  DocuToMarkdownExtractor.py  ImageToMarkdownExtractor.py  RSZ_Workers compensation insurance exemption-declaration.docx  audio_processor.py  chunk_documents_crud_vdb.py  chunk_to_all_content_mapper.py  image_processor.py  markdown_and_chunk_documents.py  output.md  propositional_index.py  propositional_index.txt  video_analyser.py
core/prevectorchunks_core/tests/: combined_sentences.txt  propositional_index.txt  test_local.py
core/prevectorchunks_core/utils/: __init__.py  extract_content.py  file_loader.py
web/prevectorchunks_web/api/: views.py
