[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prevectorchunks-web"
version = "0.1.1"
description = "A Python Django based REST endpoints that allows to convert a document into chunks to be inserted into pinecone vector database"
readme = "README.md"  # <- important for PyPI
license = { file = "LICENSE" }
authors = [
    { name = "Zul Al-Kabir", email = "zul.developer.2023@gmail.com" }
]
# Core dependency
dependencies = [
    "Django==5.1",
    "django-cors-headers~=4.4.0",
    "fastapi~=0.112.2",
    "PyJWT~=2.7.0",
    "prevectorchunks_core==0.1.1"
]

[tool.setuptools.packages.find]
include = ["prevectorchunks_web*"]
[project.urls]
Homepage = "https://github.com/yourusername/mydep"
