[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prevectorchunks-core"
version = "0.1.25"
description = "A Python module that allows conversion of a document into chunks to be inserted into Pinecone vector database"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Zul Al-Kabir", email = "zul.developer.2023@gmail.com" }
]

dependencies = [
    "packaging~=24.1",
    "requests~=2.32.3",
    "openai>=2.6.0,<3.0.0",
    "python-dotenv~=1.0.1",
    "PyJWT~=2.7.0",
    "fastapi~=0.112.2",
    "datasets~=4.1.0",
    "pinecone~=7.3.0",
    "pytesseract~=0.3.13",
    "python-docx~=1.2.0",
    "PyPDF2~=3.0.1",
    "pillow~=11.3.0",
    "torch~=2.6.0",
    "torchvision~=0.21.0",
    "torchaudio~=2.6.0",
    "sentence-transformers~=5.1.1",
    "py-gutenberg~=1.0.3",
    "langchain-text-splitters~=0.3.11", # <-- add this
    "langchain~=0.3",
    "langchain_openai~=0.3.35",
    # … your existing dependencies …
    "transformers>=4.30.0",
    "accelerate>=0.22.0",
    "imageio-ffmpeg>=0.4.8",
    "opencv-python>=4.10.0", # for frame extraction
    # or whichever version of LLaVA you use
    "pathlib~=1.0.1",
    "transformers~=4.57.0",
    "imageio-ffmpeg~=0.6.0",
    "opencv-python~=4.12.0.88",
    "requests~=2.32.5",
    "langchain-core~=0.3.78",
    "pdf2image~=1.17.0",
    "docx2pdf~=0.1.8",
    "numpy~=2.2.6",
    "scikit-learn~=1.7.2",
    "PyMuPDF~=1.22.5"
]

[tool.setuptools.packages.find]
include = ["prevectorchunks_core*"]
[tool.setuptools.package-data]
"prevectorchunks_core.rlchunker.pretrained" = ["*.pt", "*.txt"]

[tool.setuptools]
include-package-data = true
[project.urls]
Homepage = "https://github.com/yourusername/mydep"
